--- a/en/MSc.html
+++ b/en/MSc.html
@@ -43,7 +43,7 @@
 		</ul>
 		<h2>Small Lab projects</h2>
 		<ul>
-			<li>MOT lab: Perform spectroscopy of Rb atoms, and use this setup to control the frequency of the laser. Then use this laser to make a magneto-optical trap containing ultracold Rb.</li>
+			<li>MOT lab: Implement and optimize a magneto-optical trap for ultracold Rb atoms. (<a href="../doc/Summary_Report_for_MOT_Lab Zhi_Zeng.pdf" target="_blank"><b>a short summary</b></a>)</li>
 			<li style="margin-bottom: 30px;">Simulation lab: Gain working knowledge of QuTiP (an open-source code library written in Python to simulate the dynamics of open quantum systems) and use it to simulate the dynamics of quantum oscillators and cavity-QED systems.</li>
 		</ul>
 		<h2>Lectures</h2>
