--- a/en/MSc.html
+++ b/en/MSc.html
@@ -35,7 +35,7 @@
 			<li><a href="../doc/Optimal_Control_of_Trapped_Ions.pdf" target="_blank"><b>Literature review</b></a> </li>
 			<li style="margin-bottom: 30px;"><a href="../doc/pre.pdf" target="_blank"><b>Slides for presentation</b></a></li>
 		</ul>
-		<h2>RCS Mini Project (Research Computing Skills Lecture: matlab and mathematica)</h2>
+		<h2>RCS Mini Project (Research Computing Skills Lecture: Matlab and Mathematica)</h2>
 		<ul>
 			<li><a href="../doc/Documentation.pdf" target="_blank"><b>Ferromagnetism in the Ising model using the Metropolis algorithm</b></a> </li>
 			<li><a href="../doc/MCMC_2DIsing.m" target="_blank"><b>matlab codes</b></a> </li>
