--- a/en/MSc.html
+++ b/en/MSc.html
@@ -41,7 +41,7 @@
 			<li><a href="../doc/MCMC_2DIsing.m" target="_blank"><b>matlab codes</b></a> </li>
 			<li style="margin-bottom: 30px;"><a href="../doc/python_codes_for_Ising_with_Metropolis.zip" target="_blank"><b>python codes</b></a></li>
 		</ul>
-		<h2>Small Lab projects</h2>
+		<h2>Lab Projects</h2>
 		<ul>
 			<li>MOT lab: Implement and optimize a magneto-optical trap for ultracold Rb atoms. (<a href="../doc/Summary_Report_for_MOT_Lab Zhi_Zeng.pdf" target="_blank"><b>a short summary</b></a>)</li>
 			<li style="margin-bottom: 30px;">Simulation lab: Gain working knowledge of QuTiP (an open-source code library written in Python to simulate the dynamics of open quantum systems) and use it to simulate the dynamics of quantum oscillators and cavity-QED systems.</li>
