--- a/en/index.html
+++ b/en/index.html
@@ -44,6 +44,9 @@
 		</div><!-- /.container -->
 		<br>
 		<h2>Research Interests</h2>
+		<p>
+    		Reducing the resource requirements, reducing the error rates, in quantum computing/simulation。
+		</p>
 		<ul>
 			<li>developing practical quantum device</li>
 			<li>quantum simulation</li>
