--- a/en/index.html
+++ b/en/index.html
@@ -45,7 +45,7 @@
 		<br>
 		<h2>Research Interests</h2>
 		<p>
-    		Reducing the resource requirements, reducing the error rates, in quantum computing/simulation。
+    		Reducing the resource requirements, reducing the error rates, in quantum computing/simulation.
 		</p>
 		<ul>
 			<li>developing practical quantum device</li>
