--- a/en/index.html
+++ b/en/index.html
@@ -64,7 +64,8 @@
 		<h2>Language</h2>
 		<ul>
 			<li>Mandarin, Cantonese</li>
-			<li>English (IELTS-7.5，GRE-V153Q170)</li>
+			<li>English (IELTS-7.5)</li>
+			<!-- GRE-V153Q170 -->
 		</ul>
 		<br>
 
