--- a/en/index.html
+++ b/en/index.html
@@ -57,6 +57,7 @@
 		<br>
 		<h2>Education</h2>
 		<ul>
+			<li>incoming PhD student, <a href="https://www.cse.cuhk.edu.hk" target="_blank">Department of Computer Science and Engineering, The Chinese University of Hong Kong</a></li>
 			<li>09/2024-09/2025：MSc in Physcis with Quantum Dynamics, <a href="https://www.imperial.ac.uk/physics" target="_blank">Department of Physics, Imperial College London</a></li>
 			<li>09/2020-06/2024：BSc in Physics, <a href="https://spe.sysu.edu.cn" target="_blank">School of Physics, Sun Yat-Sen University</a>, Guangzhou. Member of <a href="https://baike.baidu.com/item/%E5%9F%BA%E7%A1%80%E5%AD%A6%E7%A7%91%E6%8B%94%E5%B0%96%E5%AD%A6%E7%94%9F%E5%9F%B9%E5%85%BB%E8%AE%A1%E5%88%922.0%E5%9F%BA%E5%9C%B0/53704775?fr=aladdin" target="_blank">the Top-notch Student Training Program 2.0 Base for Basic Disciplines</a></li>
 		</ul>
