--- a/en/index.html
+++ b/en/index.html
@@ -34,11 +34,27 @@
 			<p>Email：zeng9245@gmail.com</p>
 
 		<!-- style="text-indent: 2em;" -->
-		<p>
-    		Academically, I am deeply interested in applications of quantum mechanics, 
+		<!-- Academically, I am deeply interested in applications of quantum mechanics, 
     		especially in quantum computing. In daily life, I love sports. For drinks,
-    		I especially enjoy pure tea and iced Americanos.
-		</p>
+    		I especially enjoy pure tea and iced Americanos. -->
+		
+		<blockquote class="quote">
+  		“To see the world, things dangerous to come to, to see behind walls, draw closer,
+  		to find each other and to feel. That is the purpose of life”
+  		<cite>— The Secret Life of Walter Mitty</cite>
+		</blockquote>
+
+		.quote {
+  		max-width: 700px;   /* 可选，控制段落宽度 */
+  		font-style: italic;
+		}
+
+		.quote cite {
+  		display: block;        /* 自动换行 */
+  		text-align: right;     /* 右对齐 */
+		}
+
+
 			
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
