--- a/en/index.html
+++ b/en/index.html
@@ -38,21 +38,12 @@
     		especially in quantum computing. In daily life, I love sports. For drinks,
     		I especially enjoy pure tea and iced Americanos. -->
 		
-		<blockquote class="quote">
-  		“To see the world, things dangerous to come to, to see behind walls, draw closer,
-  		to find each other and to feel. That is the purpose of life”
-  		<cite>— The Secret Life of Walter Mitty</cite>
-		</blockquote>
+		<p>
+  		“To see the world, things dangerous to come to, to see behind walls, draw closer, 
+  		to find each other and to feel. That is the purpose of life.”<br>
+  		<span style="float: right;">— The Secret Life of Walter Mitty</span>
+		</p>
 
-		.quote {
-  		max-width: 700px;   /* 可选，控制段落宽度 */
-  		font-style: italic;
-		}
-
-		.quote cite {
-  		display: block;        /* 自动换行 */
-  		text-align: right;     /* 右对齐 */
-		}
 
 
 			
