--- a/en/index.html
+++ b/en/index.html
@@ -55,11 +55,11 @@
     		Reducing the resource requirements, reducing the error rates, in quantum computing/simulation.
 		</p>
 		<ul>
-			<li>developing practical quantum device</li>
 			<li>quantum control</li>
 			<li>quantum architecture</li>
+			<li>quantum error mitigation</li>
 			<li>quantum error correction</li>
-			<li>quantum simulation</li>
+			<li>quantum software engineering</li>
 		</ul>
 		<br>
 		<h2>Education</h2>
