--- a/en/index.html
+++ b/en/index.html
@@ -41,7 +41,7 @@
 		<p>
   		“To see the world, things dangerous to come to, to see behind walls, draw closer, 
   		to find each other and to feel. That is the purpose of life.”<br>
-  		<span style="float: right;">— The Secret Life of Walter Mitty</span>
+  		<span style="float: right;">— The Secret Life of Walter Mitty&nbsp;</span>
 		</p>
 
 
@@ -52,7 +52,7 @@
 		<br>
 		<h2>Research Interests</h2>
 		<p>
-    		Reducing the resource requirements, reducing the error rates, in quantum computing/simulation.
+    		Reducing the resource requirements, reducing the error rates, in quantum computation.
 		</p>
 		<ul>
 			<li>quantum control</li>
@@ -72,7 +72,7 @@
 		<h2>Language</h2>
 		<ul>
 			<li>Mandarin, Cantonese</li>
-			<li>English (IELTS-7.5)</li>
+			<li>English (IELTS-7.5, GRE-V153Q170)</li>
 			<!-- GRE-V153Q170 -->
 		</ul>
 		<br>
